--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,72 @@
+
 .pokedex {
   width: 400px;
   height: 500px;
   margin: 0 auto;
   position: relative;
-  border-radius: 10px;
   perspective: 1000px;
 }
 
-.left-side {
+.side {
   width: inherit;
   height: inherit;
-  background-color: red;
+  border-radius: 10px;
+  background-color: #FF2600;
   position: absolute;
-  border-radius: inherit;
 }
 
-.right-side-back {
-  width: inherit;
-  height: inherit;
-  background-color: blue;
-  position: absolute;
-  border-radius: inherit;
+.left {
+}
+
+.left .buttons-area {
+  width: calc(100% - 100px);
+  margin: 20px;
+}
+
+.btn {
+  border-radius: 50%;
+  display: inline-block;
+  border: 1px solid black;
+  width: 10px;
+  height: 10px;
+  vertical-align: top;
+}
+
+.left .main {
+  background-color: skyblue;
+  width: 50px;
+  height: 50px;
+}
+
+.btn.first {
+  background-color: red;
+}
+
+.btn.second {
+  background-color: yellow;
+}
+
+.btn.third {
+  background-color: green;
+}
+
+.right-back {
   left: 100%;
   transform: rotateY(-180deg);
   transform-origin: left;
   transition: 1s;
 }
 
-.pokedex:hover .right-side-back {
+.pokedex:hover .right-back {
   transform: rotateY(0);
 }
 
-.right-side-front {
-  width: inherit;
-  height: inherit;
-  background-color: peru;
-  position: absolute;
-  border-radius: inherit;
+.right-front {
   transform-origin: right;
   transition: 1s;
   backface-visibility: hidden;
 }
 
-.pokedex:hover .right-side-front {
+.pokedex:hover .right-front {
   transform: rotateY(180deg);
 }
