--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,9 @@
   transform: rotateY(-180deg);
   transform-origin: left;
   transition: 1s;
+  height: calc(100% - 100px);
+  bottom: 0;
+  border-top-left-radius: 0;
 }
 
 .pokedex:hover .right-back {
@@ -67,8 +70,39 @@
   transform-origin: right;
   transition: 1s;
   backface-visibility: hidden;
+  height: calc(100% - 100px);
+  bottom: 0;
+  border-top-right-radius: 0;
 }
 
 .pokedex:hover .right-front {
   transform: rotateY(180deg);
+}
+
+.right-front-tab {
+  width: 230px;
+  height: 60px;
+  background-color: blue;
+  position: absolute;
+  bottom: 100%;
+  right: -1px;
+  border-radius: 10px;
+  border-bottom-right-radius: 0;
+  border: 1px solid black;
+  box-sizing: border-box;
+  border-bottom: 0;
+}
+
+.right-back-tab {
+  width: 230px;
+  height: 60px;
+  background-color: blue;
+  position: absolute;
+  bottom: 100%;
+  left: -1px;
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border: 1px solid black;
+  box-sizing: border-box;
+  border-bottom: 0;
 }
