--- a/css/styles.css
+++ b/css/styles.css
@@ -79,30 +79,24 @@
   transform: rotateY(180deg);
 }
 
-.right-front-tab {
+.tab {
   width: 230px;
   height: 60px;
   background-color: blue;
   position: absolute;
   bottom: 100%;
-  right: -1px;
   border-radius: 10px;
-  border-bottom-right-radius: 0;
   border: 1px solid black;
   box-sizing: border-box;
   border-bottom: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
-.right-back-tab {
-  width: 230px;
-  height: 60px;
-  background-color: blue;
-  position: absolute;
-  bottom: 100%;
+.front-tab {
+  right: -1px;
+}
+
+.back-tab {
   left: -1px;
-  border-radius: 10px;
-  border-bottom-left-radius: 0;
-  border: 1px solid black;
-  box-sizing: border-box;
-  border-bottom: 0;
 }
