--- a/css/styles.css
+++ b/css/styles.css
@@ -160,16 +160,17 @@
 
 .display-border {
   width: calc(100% - 80px);
-  height: calc(100% - 280px);
+  height: calc(100% - 250px);
   background-color: var(--gray);
   border: 2px solid black;
   border-radius: 5px;
   margin: 0 auto;
+  position: relative;
 }
 
 .display-top-leds-area {
   width: 60px;
-  height: 30px;
+  height: 40px;
   margin: 0 auto;
   position: relative;
 }
@@ -191,4 +192,17 @@
 
 .display-top-leds-area .right {
   right: 10px;
+}
+
+.display {
+  width: 250px;
+  height: 170px;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  border-radius: 10px;
 }
