--- a/css/styles.css
+++ b/css/styles.css
@@ -245,3 +245,30 @@
   bottom: 10px;
   left: 28px;
 }
+
+.buttons-area {
+  width: 100%;
+  height: 200px;
+  position: relative;
+}
+
+.select-start {
+  width: 40px;
+  height: 5px;
+  border-radius: 10px;
+  border: 2px solid black;
+  display: inline-block;
+  position: absolute;
+  top: 20px;
+}
+
+.select-start.left {
+  background-color: red;
+  left: 80px;
+}
+
+.select-start.right {
+  background-color: blue;
+  position: absolute;
+  left: 150px;
+}
