--- a/css/styles.css
+++ b/css/styles.css
@@ -272,3 +272,13 @@
   position: absolute;
   left: 150px;
 }
+
+.black-btn-left {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  left: 25px;
+  top: 30px;
+}
