--- a/css/styles.css
+++ b/css/styles.css
@@ -339,3 +339,11 @@
   border: 2px solid black;
   border-radius: 50%;
 }
+
+.btn {
+  cursor: pointer;
+}
+
+.btn:active {
+  transform: scale(.9);
+}
