--- a/css/styles.css
+++ b/css/styles.css
@@ -382,3 +382,18 @@
   border: 1px solid black;
   border-radius: 5px;
 }
+
+.black-btn-area {
+  position: absolute;
+  right: 70px;
+  top: 194px;
+}
+
+.black-btn-area .btn {
+  display: inline-block;
+  width: 40px;
+  height: 5px;
+  background-color: var(--black);
+  border-radius: 10px;
+  border: 2px solid black;
+}
