--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,7 @@
 }
 
 .left-display {
-  width: 260px;
+  width: 270px;
   height: 70px;
   position: absolute;
   background-color: var(--black);
@@ -363,7 +363,7 @@
 }
 
 .blue-btn-area {
-  width: 260px;
+  width: 270px;
   height: 80px;
   position: absolute;
   top: 110px;
@@ -379,14 +379,14 @@
   width: 50px;
   height: 40px;
   background-color: var(--btn-blue);
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 5px;
 }
 
 .black-btn-area {
   position: absolute;
   right: 70px;
-  top: 194px;
+  top: 200px;
 }
 
 .black-btn-area .btn {
@@ -395,5 +395,20 @@
   height: 5px;
   background-color: var(--black);
   border-radius: 10px;
+  border: 2px solid black;
+}
+
+.gray-btn-area {
+  position: absolute;
+  top: 230px;
+  left: 63px;
+  display: flex;
+}
+
+.gray-btn-area .btn {
+  width: 40px;
+  height: 30px;
+  background-color: var(--gray);
+  border-radius: 5px;
   border: 2px solid black;
 }
