--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@
   width: 10px;
   height: 10px;
   vertical-align: top;
+  box-shadow: 2px 2px 3px;
 }
 
 .left .border-main {
@@ -358,6 +359,7 @@
 
 .btn {
   cursor: pointer;
+  box-shadow: 3px 3px 5px;
 }
 
 .btn:active {
